--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -19,7 +20,11 @@ body {
   background: white;
   width: 480px;
   border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.2);
+  /* Tambahan */
+  padding: 12px;
+  display: flex;
+  gap: 12px;
 }
 
 .icon {
@@ -49,7 +54,6 @@ body {
   border: 1px solid #eee;
   padding: 0;
 }
-
 button {
   cursor: pointer;
   padding: 8px 16px;
@@ -66,4 +70,27 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+/* Tambahan */
+.modal {
+  display: flex;
+  gap: 16px;
+  padding: 16px;
+}
+.icon {
+  flex-shrink: 0;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.text {
+  margin-bottom: 16px;
 }
